--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo rem doloremque modi, quaerat amet odit dolore accusamus autem tenetur natus eveniet ullam culpa provident laudantium ipsa nesciunt iure maxime magnam!</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
