--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li>Contact us</li>
     </ul>
        <footer>Cpoy@rigth 2024</footer>
-       <main>hello</main>
+       <main>hello
+        <p>Hello my dear friend</p>
+       </main>
 </body>
 </html>
